se agregaron 3 habilidades: c++, powerbi, powershell

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <img src="./assets/img/logos_bootstrap.png" alt="Icono Bootstrap">
                 </div>
             </div>
-            <button class="btn__skill sombra">Bootstrap</button>
+            <button class="btn__skill sombra">BootStrap</button>
         </div>
         <div class="skill__card">
             <div class="skill__card__cuadro sombra">
@@ -178,6 +178,30 @@
                 </div>
             </div>
             <button class="btn__skill sombra">Python</button>
+        </div>
+        <div class="skill__card">
+            <div class="skill__card__cuadro sombra">
+                <div class="skill__card__img">
+                    <img src="./assets/img/icon _C++_.svg" alt="Icono de C++">
+                </div>
+            </div>
+            <button class="btn__skill sombra">C++</button>
+        </div>
+        <div class="skill__card">
+            <div class="skill__card__cuadro sombra">
+                <div class="skill__card__img">
+                    <img src="./assets/img/icon _powerbi_.svg" alt="Icono de PowerBI">
+                </div>
+            </div>
+            <button class="btn__skill sombra">PowerBI</button>
+        </div>
+        <div class="skill__card">
+            <div class="skill__card__cuadro sombra">
+                <div class="skill__card__img">
+                    <img src="./assets/img/icon _file type powershell_.svg" alt="Icono de PowerShell">
+                </div>
+            </div>
+            <button class="btn__skill sombra">PowerShell</button>
         </div>
     </div>
 </section>
