se agrega eduación nueva: uvm

--- a/index.html
+++ b/index.html
@@ -270,6 +270,20 @@
                 </div>
             </article>
 
+            <article class="card__general__formacion">
+                <div class="formacion__img">
+                    <img src="./assets/img/logo_uvm.png" alt="Logo UVM">
+                </div>
+                <div class="formacion__info">
+                    <h3 class="formacion__titulo">
+                        Universidad del Valle de México - 2024
+                    </h3>
+                    <p class="formacion__descripcion">
+                        Ing. Tecnologías y Sistemas de la Información
+                    </p>
+                </div>
+            </article>
+
         </div>
     </div>
 </section>
